Fix layout overflow isssue

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -7,7 +7,6 @@ html {
 body {
   margin: 0;
   font-family: Arial;
-  overflow-x: hidden;
 }
 
 .page-title {
