--- a/src/Styles/modules/pokedex.scss
+++ b/src/Styles/modules/pokedex.scss
@@ -1,7 +1,7 @@
 .pokedex {
   position: absolute;
   display: none;
-  width: 100vw;
+  width: 100%;
   background: #eee;
   box-sizing: border-box;
 }
